--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,12 @@ Imports:
   dplyr,
   ggplot2,
   purrr,
-  tidyr
+  tidyr,
 Roxygen: list(markdown = TRUE)
 Depends: 
   R (>= 4.2)
 Suggests: 
+  covr,
   testthat (>= 3.0.0),
   vdiffr
 Config/testthat/edition: 3
